[tool.poetry]
name = "cipher_xs2441"
version = "0.1.0"
description = "Cipher package for MDS2021"
authors = ["Alan Shen"]
license = "MIT"
readme = "README.md"
documentation = 'https://qmsspkg.readthedocs.io'
homepage = "https://github.com/QMSS-G5072-2021/cipher_shen_alan"
repository = "https://github.com/QMSS-G5072-2021/cipher_shen_alan"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
